--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,19 @@
 
 <body>
   <p>Welcome to the chat app</p>
+
+  <script src="/socket.io/socket.io.js"> </script>
+  <script>
+    var socket = io(); // initiating request from client to server to open socket and stores into var
+
+    socket.on('connect', () =>{
+      console.log('Connected to server');
+    });
+
+    socket.on('disconnect', () =>{
+      console.log('Connected dropped/ Disconnected from Server');
+    });
+  </script>
 </body>
 
 </html>
